--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react-helmet": "^6.1.5",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.0.0",
     "sass": "^1.54.9",
     "swiper": "^8.4.2",
     "typescript": "^4.8.3",
