--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
+    "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.4",
