--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-helmet": "^6.1.5",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "firebase": "^9.10.0",
+    "firestore-export-import": "^1.2.1",
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
