--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firestore-export-import": "^1.2.1",
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
