--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "react-youtube": "^10.0.0",
     "sass": "^1.54.9",
     "swiper": "^8.4.2",
